--- a/flutter_base/pubspec.yaml
+++ b/flutter_base/pubspec.yaml
@@ -1,17 +1,13 @@
 name: flutter_base
-description: A new Flutter project.
+description: Flutter Base App.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
 # followed by an optional build number separated by a +.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+# Read more about versioning at semver.org.
+version: 0.2.2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -19,13 +15,65 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # base_library基础组建库,包含：
+  # Dart 常用工具类库 common_utils，Flutter 常用工具类库 flustars，
+  # 网络 dio，国际化 fluintl，屏幕适配 auto_size。
+  #
+  #
+  #
+
+  # 本地依赖
+#  base_library:
+#      path: ../FlutterRepos/base_library/
+
+  # git依赖
   base_library:
-    path: ../base_library/
+      git:
+        url: git://github.com/Sky24n/FlutterRepos.git
+        path: base_library
+
+  # 汉字转拼音库 https://github.com/flutterchina/lpinyin
+  lpinyin: ^1.0.7
+  # Dart 常用工具类库 https://github.com/Sky24n/common_utils
+#  common_utils: ^1.1.1
+  # Flutter 常用工具类库 https://github.com/Sky24n/flustars
+#  flustars: ^0.2.5+1
+  # Flutter 国际化/多语言库 https://github.com/Sky24n/fluintl
+#  fluintl: ^0.1.3
+  # Flutter 城市列表 https://github.com/flutterchina/azlistview
+  azlistview: ^0.1.1
+
+
+  # https://github.com/flutterchina/dio
+#  dio: 1.0.13
+  # rxdart https://github.com/ReactiveX/rxdart
+  rxdart: ^0.22.0
+  # https://github.com/renefloor/flutter_cached_network_image
+  cached_network_image: ^0.8.0
+  # https://github.com/flutter/plugins/tree/master/packages/url_launcher
+  url_launcher: ^5.0.2
+  # https://github.com/peng8350/flutter_pulltorefresh
+  pull_to_refresh: 1.1.6
+  # device_info
+#  device_info: ^0.4.0+1
+  # webview_flutter
+  webview_flutter: ^0.3.9+1
+  # share
+  share: ^0.6.1+1
+  # https://github.com/flutterchina/flukit.
+  flukit: ^1.0.0
+
+  # Flutter 全局屏幕适配。https://github.com/flutterchina/auto_size
+#  auto_size:
+#      git:
+#        url: git://github.com/flutterchina/auto_size.git
 
 dev_dependencies:
   flutter_test:
@@ -33,7 +81,7 @@ dev_dependencies:
 
 
 # For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
+# following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
@@ -42,19 +90,34 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/ali_connors.png
+    - assets/images/ali_connors_sml.png
+    - assets/images/qrcode.png
+    - assets/images/icon_wan_android.png
+    - assets/images/ic_launcher_news.png
+    - assets/images/guide1.png
+    - assets/images/guide2.png
+    - assets/images/guide3.png
+    - assets/images/guide4.png
+    - assets/images/splash_bg.png
+
+    - packages/base_library/assets/ic_login_bg.png
+    - packages/base_library/assets/ic_network_error.png
+    - packages/base_library/assets/ic_data_empty.png
+
+    - assets/data/china.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-  assets:
-     - packages/base_library/assets/ic_login_bg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+  # https://flutter.io/assets-and-images/#resolution-aware.
 
   # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+  # https://flutter.io/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
@@ -74,4 +137,4 @@ flutter:
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # see https://flutter.io/custom-fonts/#from-packages
